# v4l2_rtsp_server

./: .gitignore  CMakeLists.txt  README.md
include/: constants.h  live555_rtsp_server_manager.h  logger.h  v4l2_capture.h  v4l2_h264_framed_source.h  v4l2_h264_media_subsession.h
src/: live555_rtsp_server_manager.cpp  logger.cpp  main.cpp  v4l2_capture.cpp  v4l2_h264_framed_source.cpp  v4l2_h264_media_subsession.cpp
